fix: company name change

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /**
  * Stylesheet:  style.css
- * Theme:       Luxelife - Architecture & Interior Design HTML5 Template
+ * Theme:       Hotex Luxury Hotel HTML5 Template
  * Version:     1.0
  * Author:     	DevlinkStudios
  * 
