--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /**
  * Stylesheet:  style.css
- * Theme:       Luxelife - Architecture & Interior Design HTML5 Template
+ * Theme:       Hotex Luxury Hotel HTML5 Template
  * Version:     1.0
  * Author:     	DevlinkStudios
  * 
@@ -67,7 +67,6 @@ Footer
 @import "partials/menu-sidebar";
 @import "partials/title-section";
 
-
 // 4.Slider Section
 @import "modules/slider/slider-style-one";
 @import "modules/slider/slider-style-two";
@@ -106,7 +105,6 @@ Footer
 @import "modules/about-info-card/about-info-card-five";
 @import "modules/about-info-card/info-group-card";
 
-
 // 9.Counter Card
 @import "modules/counter/counter-card";
 @import "modules/counter/counter-card-two";
@@ -118,7 +116,6 @@ Footer
 
 // 10.Brand Marquee
 @import "modules/brand-marquee/brand-marquee";
-
 
 // 11.Testimonial Card
 @import "modules/testimonial-card/testimonial-card";
@@ -196,12 +193,10 @@ Footer
 @import "modules/video-popup-card/video-popup-card-two";
 @import "modules/video-popup-card/video-popup-card-three";
 
-
 //Portfolio Slider
 @import "modules/project-card/project-card";
 @import "modules/project-card/project-card-two";
 @import "modules/project-card/project-card-three";
-
 
 // Masonry Portfolio Gallery
 @import "modules/masonary-portfolio-gallery/masonary-portfolio-gallery";
