--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,4 @@
-$primary-color: #0a6847;
+$primary-color: #aa8453;
 $orange-color: #ff9205;
 $secondary-color: #26262c;
 $blue-color: #d9a14c;
@@ -24,6 +24,6 @@ $text-gray-light: #6a6c73;
 $border-color: #e3e3e3;
 
 $jost-font: "Jost", sans-serif;
-$body-font: "Outfit", sans-serif;
-$heading-font: "Outfit", sans-serif;
+$body-font: "Barlow Condensed", sans-serif;
+$heading-font: "Gilda Display", serif;
 $font-awesome: "Font Awesome 6 Pro";
