--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -2,9 +2,14 @@
   overflow: hidden;
   position: relative;
   z-index: 2;
-  padding-top: 90px;
-  padding-bottom: 36px;
-
+  height: 999px;
+  .shape {
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
+    background-color: transparent;
+    z-index: -1;
+  }
   .slider-bg {
     position: absolute;
     top: 0;
@@ -22,7 +27,7 @@
       height: 100%;
       padding: 39px 0;
       aspect-ratio: 1/1;
-      @include sm{
+      @include sm {
         padding-bottom: 0;
       }
     }
@@ -53,7 +58,7 @@
     position: relative;
     z-index: 2;
     overflow: hidden;
-    padding-top: 30px;
+    padding-top: 238px;
 
     @include xl {
       padding-top: 80px;
@@ -77,7 +82,6 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-
     }
 
     .slider-content-wrapper {
@@ -98,13 +102,13 @@
         }
 
         .slider-short-title {
-          font-family: $heading-font;
+          font-family: $body-font;
           font-size: 18px;
-          font-weight: 700;
-          line-height: 27px;
-          letter-spacing: 4px;
+          font-weight: 400;
+          line-height: normal;
+          letter-spacing: 5.4px;
           text-transform: uppercase;
-          color: $black;
+          color: $white;
           margin-bottom: 10px;
 
           @include xl {
@@ -121,18 +125,26 @@
         }
 
         .slider-title {
-          font-size: 68px;
-          line-height: 78px;
-          font-weight: 700;
+          color: $white;
           font-family: $heading-font;
-          color: $black;
+          font-size: 60px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          text-transform: uppercase;
           margin-bottom: 30px;
-          margin-top: 7px;
-
+          margin-top: 14px;
+          span {
+            color: $primary-color;
+            font-size: 40px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            text-transform: uppercase;
+          }
           @include xl {
             color: $white;
           }
-
 
           @include lg {
             font-size: 48px;
@@ -172,13 +184,13 @@
           @include xl {
             color: $white;
           }
-          
+
           @include lg {
             font-size: 18px;
             line-height: 32px;
             margin-bottom: 38px;
           }
-          
+
           @include md {
             font-size: 18px;
             line-height: 32px;
@@ -208,7 +220,6 @@
           }
         }
       }
-
     }
 
     .slider-btn-wrapper {
@@ -219,25 +230,23 @@
       position: relative;
       z-index: 1;
 
-      .simple-btn,
-      .theme-btn {
+      .simple-btn {
         padding: 14px 24px;
-        font-family: $heading-font;
+        font-family: $body-font;
         font-size: 16px;
-        font-weight: 700;
-        line-height: 32px;
-        letter-spacing: 1.28px;
-        text-transform: uppercase;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px;
         flex-shrink: 0;
         border: 1px solid $primary-color;
       }
 
       .simple-btn {
         color: $white;
-        background-color: $primary-color;
-        display: inline-flex;
-        align-items: center;
-        gap: 15px;
+        background-color: transparent;
+        padding: 15px 30px;
+        border: 1px solid $white;
+        border-radius: 5px;
         @include transition;
 
         &:hover {
@@ -245,7 +254,6 @@
           color: $black;
           border: 1px solid $primary-color;
           @include transition;
-
         }
       }
 
@@ -258,7 +266,6 @@
           font-size: 20px;
         }
 
-
         &:hover {
           background-color: $primary-color;
           color: $white;
@@ -268,17 +275,22 @@
     }
 
     .slider-image {
-      //position: relative;
+      position: relative;
+      height: 300px;
       //z-index: 2;
-      //width: 860px;
-      animation: MoveUpDown 2s linear infinite alternate;
-      text-align: right;
+      // animation: MoveUpDown 2s linear infinite alternate;
+      // text-align: right;
 
       //right: -110px;
       //top: 20px;
       .slider-image-inner {
-        display: inline-block;
-        margin-right: -70px;
+        width: 90px;
+        height: 57px;
+        overflow: hidden;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
       }
 
       @include sm {
@@ -292,13 +304,10 @@
         width: auto;
         margin-top: inherit;
       }
-
     }
   }
 
   .slider-wrapper {
-
-
     // Active Slider Animate
     .slick-active .slider-short-title,
     .slick-active .slider-title,
@@ -309,7 +318,6 @@
       animation-name: MovefadeUp;
       -webkit-animation-fill-mode: both;
     }
-
 
     .slick-active .slider-short-title {
       -webkit-animation-delay: 0.3s;
@@ -375,14 +383,13 @@
     }
 
     .next-btn {
-      bottom: 25%;
+      bottom: 0;
     }
-
 
     // Slick Dots
     .slick-dots {
       display: flex;
-      gap: 2px;
+      gap: 30px;
       flex-direction: column;
       position: absolute;
       top: 346px;
@@ -406,7 +413,7 @@
       }
 
       li {
-        display: inline-block;
+        display: flex;
         line-height: 0;
         outline: 1px solid transparent;
         border: 4px solid transparent;
@@ -418,7 +425,7 @@
           padding: 0;
           width: 10px;
           height: 10px;
-          background-color: rgba(217, 217, 217, 0.20);
+          background-color: $white;
           border-radius: 50px;
           position: relative;
           flex-shrink: 0;
@@ -432,15 +439,18 @@
 
         &.slick-active {
           @include transition;
-          outline: 1px solid $primary-color;
+          outline: 2px solid $white;
 
           button {
-            background-color: $white;
+            width: 5px;
+            height: 5px;
+            &:before {
+              display: none;
+            }
             @include transition;
           }
         }
       }
     }
   }
-
 }
