--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -252,23 +252,21 @@ code {
 .wp-block-loginout a,
 input.theme-btn {
   display: inline-flex;
-  background-color: $primary-color;
   border: 1px solid $primary-color;
-  color: $white;
-  padding: 14px 24px;
-  text-align: center;
-  font-weight: 700;
-  font-family: $heading-font;
-  text-transform: uppercase;
+  background-color: transparent;
+  padding: 15px 30px;
+  border: 1px solid $white;
   position: relative;
-  @include transition;
-  font-size: 16px;
-  letter-spacing: 1.28px;
-  align-items: center;
-  gap: 15px;
-  overflow: hidden;
-  z-index: 2;
-  white-space: nowrap;
+  color: $white;
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: $white;
+    bottom: -4px;
+  }
 
   @include xs {
     letter-spacing: initial;
@@ -559,9 +557,7 @@ input.theme-btn {
 }
 
 // Elementor Default Padding
-.elementor-column-gap-default
-  > .elementor-column
-  > .elementor-element-populated {
+.elementor-column-gap-default > .elementor-column > .elementor-element-populated {
   padding: 0 12px !important;
 }
 
