--- a/sass/style.scss
+++ b/sass/style.scss
@@ -223,3 +223,6 @@ Footer
 @import "partials/footer-four";
 @import "partials/footer-five";
 @import "partials/footer-six";
+
+// Checknow
+@import "modules/checknow/checknow";
