add: about-us-area style-1

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,17 +1,17 @@
 $primary-color: #aa8453;
 $orange-color: #ff9205;
-$secondary-color: #26262c;
+$secondary-color: #0b6354;
 $blue-color: #d9a14c;
 $text-color: #616670;
 $white: #ffffff;
 $white-50: #ffffffb7;
 $white-100: #ffffffb3;
-$black: #23262d;
+$black: #222;
 $black-50: #1c1d20;
 $black-100: #1f2732;
 $black-200: #31373f;
 $black-300: #778196;
-$gray: #616670;
+$gray: #808287;
 $gray-50: #eef5f8;
 $gray-100: #f2f2f2;
 $gray-200: #d0d0d0;
@@ -22,8 +22,8 @@ $gray-900: #181818;
 $text-primary: #4566d4;
 $text-gray-light: #6a6c73;
 $border-color: #e3e3e3;
+$background: #e0e0e0;
 
-$jost-font: "Jost", sans-serif;
 $body-font: "Barlow Condensed", sans-serif;
 $heading-font: "Gilda Display", serif;
 $font-awesome: "Font Awesome 6 Pro";
