--- a/sass/modules/_comment-list.scss
+++ b/sass/modules/_comment-list.scss
@@ -197,7 +197,7 @@
           line-height: 30px;
           margin-bottom: 20px;
           color: $text-color;
-          font-family: $jost-font;
+          font-family: $body-font;
         }
         .avatar-name {
           margin-bottom: 10px;
