--- a/sass/modules/process-step/_process-step.scss
+++ b/sass/modules/process-step/_process-step.scss
@@ -129,7 +129,7 @@
       line-height: 30px;
       font-weight: 400;
       color: $white;
-      font-family: $jost-font;
+      font-family: $body-font;
     }
   }
 }
