--- a/sass/partials/_sidebar-two.scss
+++ b/sass/partials/_sidebar-two.scss
@@ -179,7 +179,7 @@
     .short-desc {
       font-size: 18px;
       line-height: 30px;
-      font-weight: $jost-font;
+      font-weight: $body-font;
     }
     h4 {
       color: $white;
