--- a/sass/modules/checknow/_checknow.scss
+++ b/sass/modules/checknow/_checknow.scss
@@ -74,5 +74,27 @@
       background-color: $primary-color;
       color: $white;
     }
+    select {
+      padding-right: 30px; /* Add padding for the dropdown arrow */
+      -webkit-appearance: none; /* Remove default dropdown styling */
+      -moz-appearance: none;
+      appearance: none;
+    }
+
+    /* Custom dropdown arrow */
+    .select-container {
+      position: relative;
+    }
+
+    .select-container::after {
+      content: "\f078"; /* FontAwesome down arrow */
+      font-family: $font-awesome;
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      pointer-events: none;
+      color: $white;
+    }
   }
 }
