--- a/sass/modules/icon-card/_icon-card-two.scss
+++ b/sass/modules/icon-card/_icon-card-two.scss
@@ -1,26 +1,24 @@
-
 .icon-card {
-   &.style-2 {
+  &.style-2 {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 30px;
+    align-items: center;
+    gap: 70px;
 
     .icon-card-inner {
-        display: flex;
-        align-items: flex-start;
-        gap: 20px;
-        position: relative;
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      position: relative;
     }
-    .content{
-        @include md{
-            gap: 0;
-        }
+    .content {
+      @include md {
+        gap: 0;
+      }
     }
     .image {
-        width: 65px;
-        height: 65px;
-        flex-shrink: 0;
-    }   
-   }
+      width: 65px;
+      height: 65px;
+      flex-shrink: 0;
+    }
+  }
 }
