--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -1,7 +1,6 @@
 // Hero Section Style-1
 .hero-section {
   &.style-1 {
-
     .hero-content-area {
       // background-image: url(../images/hero-section/v-1/bg.png);
       background-position: center center;
@@ -22,7 +21,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: linear-gradient(91deg, #000 0.47%, rgba(0, 0, 0, 0.00) 99.58%);
+        background-image: linear-gradient(91deg, #000 0.47%, rgba(0, 0, 0, 0) 99.58%);
       }
     }
 
@@ -123,7 +122,6 @@
           gap: 40px;
         }
 
-
         .trusted-clients-wrapper {
           display: flex;
         }
@@ -164,11 +162,11 @@
           }
 
           img {
-           position: absolute;
-           width: 100%;
-           height: 100%;
-           border-radius: 50%;
-           object-fit: cover;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
           }
         }
 
@@ -207,7 +205,7 @@
       }
 
       @include lg {
-        padding: 120px 0  120px 40px;
+        padding: 120px 0 120px 40px;
       }
 
       @include xl {
@@ -288,25 +286,24 @@
         width: 44px;
         height: 44px;
         background: none;
-        border: 1px solid #E3E3E3;
+        border: 1px solid #e3e3e3;
         transition: all 0.5s;
 
         &:hover {
           background-color: $primary-color;
           border: 1px solid $primary-color;
-         
+
           i {
             color: $white;
           }
         }
 
         i {
-          color: #23262D;
+          color: #23262d;
           font-size: 16px;
           font-weight: 900;
           font-family: Font Awesome 6 Free;
           @include transition;
-
         }
       }
 
@@ -323,14 +320,14 @@
           height: 470px;
           position: relative;
 
-          &:hover{
-            .image{
-              img{
+          &:hover {
+            .image {
+              img {
                 transform: scale(1.03);
                 @include transition;
               }
             }
-            .theme-btn{
+            .theme-btn {
               transform: translateY(0%);
               opacity: 1;
               @include transition;
@@ -339,10 +336,9 @@
 
           @include sm {
             margin-right: 20px;
-
           }
 
-          .image{
+          .image {
             position: relative;
             width: 100%;
             height: 100%;
@@ -360,7 +356,7 @@
             }
           }
 
-          .theme-btn{
+          .theme-btn {
             display: flex;
             justify-content: space-between;
             position: absolute;
@@ -380,9 +376,6 @@
 // About Us Area
 .about-us-area {
   &.style-1 {
-    padding-top: 120px;
-    padding-bottom: 149px;
-
     @include md {
       padding: 100px 0;
     }
@@ -395,14 +388,50 @@
       @include sm {
         gap: 0;
       }
-      .title{
-        @include xl{
+      .title {
+        @include xl {
           margin-bottom: 10px;
-          
         }
-        br{
-          @include xl{
+        br {
+          @include xl {
             display: none;
+          }
+        }
+      }
+    }
+    .icon-card-wrapper {
+      display: flex;
+      gap: 70px;
+      align-items: center;
+    }
+    .btn-wrapper {
+      .inner-wrapper {
+        display: inline-flex;
+        gap: 46px;
+        padding-top: 45px;
+        border-top: 1px solid $background;
+      }
+      .booking-btn {
+        display: flex;
+        align-items: center;
+        gap: 21px;
+        .content {
+          p {
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            letter-spacing: 2.7px;
+            color: $gray-800;
+            margin-bottom: 4px;
+          }
+          a {
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 34px; /* 141.667% */
+            letter-spacing: 2.4px;
+            color: $black;
           }
         }
       }
@@ -427,7 +456,6 @@
       padding: 80px 0;
     }
 
-
     .section-title {
       margin-bottom: 84px;
 
@@ -444,7 +472,7 @@
       @include sm {
         margin-bottom: 40px;
       }
-      .short-title-wrapper{
+      .short-title-wrapper {
         margin-top: -7px;
       }
       .title {
@@ -481,7 +509,7 @@
       }
       .sec-desc {
         margin-right: 10px;
-        margin-bottom:  10px;
+        margin-bottom: 10px;
       }
     }
   }
@@ -530,7 +558,6 @@
         grid-gap: 0;
       }
     }
-
   }
 }
 
@@ -541,7 +568,7 @@
     @include sm {
       margin: 0 20px;
     }
-    @include md{
+    @include md {
       margin: 0 40px;
     }
   }
@@ -565,9 +592,7 @@
       gap: 80px;
     }
 
-
     .section-title {
-
       .title {
         margin-bottom: 0;
       }
@@ -655,7 +680,7 @@
 
   .slick-list.draggable {
     margin: 0 -15px;
-    @include sm{
+    @include sm {
       margin: 0;
     }
   }
