--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -365,7 +365,7 @@
         font-size: 16px;
         @include transition;
         position: relative;
-        font-family: $jost-font;
+        font-family: $body-font;
         display: flex;
         align-items: center;
         gap: 8px;
@@ -460,7 +460,7 @@
             display: inline-block;
             width: 100%;
             margin-bottom: 0;
-            font-family: $jost-font;
+            font-family: $body-font;
             @include transition;
           }
         }
@@ -625,12 +625,12 @@
       align-items: center;
       justify-content: flex-end;
       gap: 10px;
-      font-family: $jost-font;
+      font-family: $body-font;
     }
 
     a {
       color: $primary-color;
-      font-family: $jost-font;
+      font-family: $body-font;
     }
   }
 
