--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -4,13 +4,13 @@
   align-items: flex-end;
   margin-bottom: 60px;
 
-  @include xl{
+  @include xl {
     margin-bottom: 40px;
   }
-  @include lg{
+  @include lg {
     margin-bottom: 30px;
   }
-  @include md{
+  @include md {
     margin-bottom: 20px;
   }
   @include sm {
@@ -24,7 +24,6 @@
     flex-direction: column;
     z-index: 2;
     position: relative;
-  
 
     @include sm {
       width: 100%;
@@ -43,49 +42,48 @@
     }
   }
   .short-title {
-    font-family: $heading-font;
+    font-family: $body-font;
     font-size: 18px;
-    font-weight: 700;
-    line-height: 27px;
-    letter-spacing: 4px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 5.4px;
     text-transform: uppercase;
-    color: $primary-color;
-    margin-bottom: 10px;
+    color: $gray-800;
+    margin-bottom: 20px;
     display: inline-flex;
     align-items: center;
     gap: 10px;
 
-    &::before,
-    &::after
-    {
-      content: "";
-      width: 20px;
-      height: 1px;
-      border-bottom: 1px solid $primary-color;
-      flex: 1 1;
-    }
+    // &::before,
+    // &::after {
+    //   content: "";
+    //   width: 20px;
+    //   height: 1px;
+    //   border-bottom: 1px solid $primary-color;
+    //   flex: 1 1;
+    // }
 
-    &.no-divider {
-      &:before,
-      &:after {
-        display: none;
-      }
-    }
-    &.only-divider {
-      &::before {
-        display: none;
-      }
-    }
+    // &.no-divider {
+    //   &:before,
+    //   &:after {
+    //     display: none;
+    //   }
+    // }
+    // &. {
+    //   &::before {
+    //     display: none;
+    //   }
+    // }
   }
   .title {
     font-family: $heading-font;
-    font-size: 48px;
-    font-weight: 700;
-    line-height: 60px;
-    text-transform: capitalize;
+    font-size: 54px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
     color: $black;
     margin-bottom: 20px;
-
 
     @include lg {
       font-size: 48px;
@@ -102,7 +100,7 @@
       font-size: 32px;
       line-height: 42px;
     }
-    @media only screen and (min-width: 0px) and (max-width: 439px){
+    @media only screen and (min-width: 0px) and (max-width: 439px) {
       br {
         display: none;
       }
@@ -114,11 +112,11 @@
   .sec-desc {
     font-family: $body-font;
     font-size: 16px;
+    font-style: normal;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 29px;
     color: $gray-800;
     margin-bottom: 0;
-    flex-shrink: 0;
     .theme-btn {
       background-color: transparent;
       color: $black;
@@ -130,6 +128,15 @@
         @include transition;
       }
     }
+  }
+  .para {
+    font-family: $heading-font;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34px;
+    margin-top: 20px;
+    color: $gray;
   }
   &.two-column {
     align-items: flex-end;
@@ -146,7 +153,7 @@
       margin-bottom: 50px;
       align-items: flex-start;
     }
-   
+
     .sec-content {
       @include rmaxwd(767) {
         width: 100%;
@@ -165,11 +172,11 @@
       @include rmaxwd(767) {
         width: 100%;
       }
-      
+
       .desc {
         margin-bottom: 8px;
       }
-      
+
       .simple-btn {
         font-size: 18px;
         font-weight: 500;
