--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -21,8 +21,8 @@ $gray-800: #666;
 $gray-900: #181818;
 $text-primary: #4566d4;
 $text-gray-light: #6a6c73;
-$border-color: #e3e3e3;
-$background: #e0e0e0;
+$border-color: #e0e0e0;
+$background: #f8f5f0;
 
 $body-font: "Barlow Condensed", sans-serif;
 $heading-font: "Gilda Display", serif;
