--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -409,7 +409,7 @@
         display: inline-flex;
         gap: 46px;
         padding-top: 45px;
-        border-top: 1px solid $background;
+        border-top: 1px solid $border-color;
       }
       .booking-btn {
         display: flex;
@@ -434,6 +434,60 @@
             color: $black;
           }
         }
+      }
+    }
+  }
+}
+
+// Room and suites
+.room_and_suites {
+  .banner-text {
+    position: relative;
+    p {
+      // position: absolute;
+      // top: 0;
+      // left: 0;
+      // right: 0;
+      -webkit-text-stroke-width: 1px;
+      -webkit-text-stroke-color: rgba(102, 102, 102, 0.7);
+      font-family: "Gilda Display";
+      font-size: 200px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      text-transform: uppercase;
+      margin-bottom: 0;
+      color: $white;
+      text-wrap: nowrap;
+      transform: translate(-8%, -33%);
+    }
+  }
+  .room-card-wrapper {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 40px;
+    position: relative;
+    margin-top: -196px;
+    .room-card {
+      &:nth-child(even) {
+        margin-top: 80px;
+      }
+    }
+    .slick-slide {
+      margin: 0 12px;
+    }
+    .slick-track {
+      margin: 0 -12px;
+    }
+    .room-card-btn {
+      position: absolute;
+      &.prev-btn {
+        left: -0;
+      }
+      &.next-btn {
+        right: -0;
       }
     }
   }
