--- a/css/style.css
+++ b/css/style.css
@@ -4463,60 +4463,15 @@ body.admin-bar .header-area.style-7 {
   margin-top: 20px;
   color: #808287;
 }
-.section-title.two-column {
-  align-items: flex-end;
+.section-title.style-2 {
+  justify-content: center;
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .section-title.two-column {
-    flex-direction: column;
-    gap: 30px;
-    margin-bottom: 50px;
-    align-items: flex-start;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .section-title.two-column {
-    flex-direction: column;
-    gap: 30px;
-    margin-bottom: 50px;
-    align-items: flex-start;
-  }
-}
-@media (max-width: 767px) {
-  .section-title.two-column .sec-content {
-    width: 100%;
-  }
-}
-.section-title.two-column .sec-desc {
-  width: 537px;
-  font-family: "Barlow Condensed", sans-serif;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .section-title.two-column .sec-desc {
-    width: 440px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .section-title.two-column .sec-desc {
-    width: 100%;
-  }
-}
-@media (max-width: 767px) {
-  .section-title.two-column .sec-desc {
-    width: 100%;
-  }
-}
-.section-title.two-column .sec-desc .desc {
-  margin-bottom: 8px;
-}
-.section-title.two-column .sec-desc .simple-btn {
-  font-size: 18px;
-  font-weight: 500;
-  font-family: "Gilda Display", serif;
-  color: #222;
-  display: flex;
+.section-title.style-2 .sec-content {
   align-items: center;
-  gap: 20px;
+  text-align: center;
+}
+.section-title.style-2 .title {
+  margin-bottom: 0;
 }
 
 .slider-area {
@@ -5960,175 +5915,37 @@ body.admin-bar .header-area.style-7 {
 }
 
 .info-card.style-1 {
-  border-radius: 20px;
-  padding: 40px;
-  background: #ffffff;
-  box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.05);
-  gap: 40px;
+  padding: 22px 50px;
   display: flex;
   flex-direction: column;
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .info-card.style-1 {
-    padding: 0 16px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .info-card.style-1 {
-    padding: 0 16px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .info-card.style-1 {
-    padding: 0 30px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .info-card.style-1 {
-    padding: 0px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .info-card.style-1 {
-    padding: 0px 20px;
-  }
-}
-.info-card.style-1 .read-more a:hover {
-  color: #aa8453;
-}
-.info-card.style-1 .read-more a {
-  padding: 20px 30px;
-  border: 1px solid #d0d0d0;
-  font-family: "Gilda Display", serif;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 20px;
-  display: inline-flex;
-  align-items: center;
-  gap: 10px;
-  border-radius: 50px;
-  color: #181818;
-}
-.info-card.style-1 .read-more a:hover i {
-  color: #aa8453;
-  transition: all 0.5s ease-out;
-}
-.info-card:hover .image-wrapper .overlay {
-  transition: all 0.5s ease-out;
-  opacity: 0.72;
-}
-.info-card:hover .image-wrapper img {
-  transform: scale(1.2);
-  transition: all 0.5s ease-out;
-}
-.info-card:hover .icon img {
-  transform: rotateY(360deg);
-  transition: all 0.5s ease-out;
-}
-.info-card .image-wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  transition: all 0.6s ease;
-}
-.info-card .image-wrapper img {
-  width: 100%;
-  height: 100%;
-  transform: scale(1);
-  transition: all 0.5s ease-out;
-}
-.info-card .image-wrapper .overlay {
-  width: 100%;
-  height: 100%;
-  background: #aa8453;
-  transition: all 0.5s ease-out;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.6;
-}
-.info-card .icon-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-.info-card .icon {
-  display: flex;
-  flex-shrink: 0;
-  justify-content: start;
-  width: 54px;
-  height: 50px;
-}
-.info-card .icon img {
-  transition: all 0.5s ease-out;
-}
-.info-card .content-wrapper {
+  gap: 20px;
+  border-radius: 5px;
+  background: rgba(49, 43, 43, 0.7);
   position: relative;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
+  z-index: 2;
+  border: 1px solid transparent;
+  transition: all 0.5s ease-out;
 }
-.info-card .title-wrapper {
-  display: flex;
-  gap: 27px;
-  border-bottom: none;
-  transition: all 0.6s ease;
-  flex-direction: column;
-  align-items: start;
-}
-.info-card .title-wrapper .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 80px;
-  height: 80px;
-  background: #f2f2f2;
-  border-radius: 50px;
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .info-card .title-wrapper .icon {
-    width: auto;
-    height: auto;
-  }
-}
-.info-card .title-wrapper .counter-number {
-  font-size: 27px;
-  font-weight: 700;
-  line-height: 38px;
-  letter-spacing: -0.54px;
-  color: #666;
-}
-.info-card .title-wrapper .title {
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 34px;
-  margin: 0;
-  color: #181818;
-  transition: all 0.6s ease;
-}
-.info-card .content {
-  display: flex;
-  flex-direction: column;
-  gap: 43px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .info-card .content {
-    gap: 24px;
-  }
-}
-.info-card .content .desc {
-  transition: all 0.6s ease;
-  font-size: 16px;
-  line-height: 30px;
+.info-card.style-1 .content .title {
+  color: #ffffff;
+  font-size: 20px;
+  font-style: normal;
   font-weight: 400;
-  margin: 0;
-  color: #616670;
+  line-height: 30px; /* 150% */
+}
+.info-card.style-1 .content p {
+  color: #ffffff;
+  color: #808287;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  margin-bottom: 0;
+  margin-top: 3px;
+}
+.info-card.style-1:hover {
+  transition: all 0.5s ease-out;
+  border-color: rgba(255, 255, 255, 0.25);
 }
 
 .info-card.style-2 {
@@ -10830,60 +10647,15 @@ body.admin-bar .header-area.style-7 {
   margin-top: 20px;
   color: #808287;
 }
-.section-title.two-column {
-  align-items: flex-end;
+.section-title.style-2 {
+  justify-content: center;
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .section-title.two-column {
-    flex-direction: column;
-    gap: 30px;
-    margin-bottom: 50px;
-    align-items: flex-start;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .section-title.two-column {
-    flex-direction: column;
-    gap: 30px;
-    margin-bottom: 50px;
-    align-items: flex-start;
-  }
-}
-@media (max-width: 767px) {
-  .section-title.two-column .sec-content {
-    width: 100%;
-  }
-}
-.section-title.two-column .sec-desc {
-  width: 537px;
-  font-family: "Barlow Condensed", sans-serif;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .section-title.two-column .sec-desc {
-    width: 440px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .section-title.two-column .sec-desc {
-    width: 100%;
-  }
-}
-@media (max-width: 767px) {
-  .section-title.two-column .sec-desc {
-    width: 100%;
-  }
-}
-.section-title.two-column .sec-desc .desc {
-  margin-bottom: 8px;
-}
-.section-title.two-column .sec-desc .simple-btn {
-  font-size: 18px;
-  font-weight: 500;
-  font-family: "Gilda Display", serif;
-  color: #222;
-  display: flex;
+.section-title.style-2 .sec-content {
   align-items: center;
-  gap: 20px;
+  text-align: center;
+}
+.section-title.style-2 .title {
+  margin-bottom: 0;
 }
 
 .page-breadcrumb-area {
@@ -14660,6 +14432,27 @@ ul.children {
 }
 .room_and_suites .room-card-wrapper .room-card-btn.next-btn {
   right: 0;
+}
+
+.service-area {
+  padding: 100px 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+}
+.service-area:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(49, 43, 43, 0.9);
+  z-index: 1;
+}
+.service-area .card-wrapper {
+  margin-top: 46px;
 }
 
 .feature-area.style-1 {
