--- a/sass/modules/info-card/_info-card.scss
+++ b/sass/modules/info-card/_info-card.scss
@@ -3,179 +3,38 @@
 }
 .info-card {
   &.style-1 {
-    border-radius: 20px;
-    padding: 40px;
-    background: $white;
-    box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.05);
-    gap: 40px;
+    padding: 22px 50px;
     display: flex;
     flex-direction: column;
-    @include xl {
-      padding: 0 16px;
-    }
-    @include lg {
-      padding: 0 16px;
-    }
-    @include md {
-      padding: 0 30px;
-    }
-    @include sm {
-      padding: 0px;
-    }
-    @include xs {
-      padding: 0px 20px;
-    }
-    .read-more {
-      a {
-        &:hover {
-          color: $primary-color;
-        }
-      }
-    }
-    .read-more {
-      a {
-        padding: 20px 30px;
-        border: 1px solid $gray-200;
-        font-family: $heading-font;
-        font-size: 16px;
-        font-weight: 600;
-        line-height: 20px;
-        display: inline-flex;
-        align-items: center;
-        gap: 10px;
-        border-radius: 50px;
-        color: $gray-900;
-
-        &:hover {
-          i {
-            color: $primary-color;
-            @include transition;
-          }
-        }
-      }
-    }
-  }
-
-  &:hover {
-    .image-wrapper {
-      .overlay {
-        @include transition;
-        opacity: 0.72;
-      }
-      img {
-        transform: scale(1.2);
-        @include transition;
-      }
-    }
-    .icon {
-      img {
-        transform: rotateY(360deg);
-        @include transition;
-      }
-    }
-  }
-  .image-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    transition: all 0.6s ease;
-    img {
-      width: 100%;
-      height: 100%;
-      transform: scale(1);
-      @include transition;
-    }
-    .overlay {
-      width: 100%;
-      height: 100%;
-      background: $primary-color;
-      @include transition;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0.6;
-    }
-  }
-  .icon-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-  }
-  .icon {
-    display: flex;
-    flex-shrink: 0;
-    justify-content: start;
-    width: 54px;
-    height: 50px;
-
-    img {
-      @include transition;
-    }
-  }
-  .content-wrapper {
+    gap: 20px;
+    border-radius: 5px;
+    background: rgba(49, 43, 43, 0.7);
     position: relative;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-  }
-  .title-wrapper {
-    display: flex;
-    gap: 27px;
-    border-bottom: none;
-    transition: all 0.6s ease;
-    flex-direction: column;
-    align-items: start;
-
-    .icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-shrink: 0;
-      width: 80px;
-      height: 80px;
-      background: $gray-100;
-      border-radius: 50px;
-      @include xs {
-        width: auto;
-        height: auto;
+    z-index: 2;
+    border: 1px solid transparent;
+    @include transition;
+    .content {
+      .title {
+        color: $white;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30px; /* 150% */
+      }
+      p {
+        color: $white;
+        color: $gray;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 29px;
+        margin-bottom: 0;
+        margin-top: 3px;
       }
     }
-    .counter-number {
-      font-size: 27px;
-      font-weight: 700;
-      line-height: 38px;
-      letter-spacing: -0.54px;
-      color: $gray-800;
-    }
-    .title {
-      font-size: 24px;
-      font-weight: 600;
-      line-height: 34px;
-      margin: 0;
-      color: $gray-900;
-      transition: all 0.6s ease;
-    }
-  }
-  .content {
-    display: flex;
-    flex-direction: column;
-    gap: 43px;
-
-    @include sm {
-      gap: 24px;
-    }
-    .desc {
-      transition: all 0.6s ease;
-      font-size: 16px;
-      line-height: 30px;
-      font-weight: 400;
-      margin: 0;
-      color: $text-color;
+    &:hover {
+      @include transition;
+      border-color: rgba(255, 255, 255, 0.25);
     }
   }
 }
