add: about-us-area style-2

--- a/css/style.css
+++ b/css/style.css
@@ -105,15 +105,15 @@ h2 {
 }
 
 h3 {
-  font-size: 32px;
-  line-height: 42px;
-  font-weight: 700;
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 400;
 }
 
 h4 {
-  font-size: 24px;
-  line-height: 30px;
-  font-weight: 700;
+  font-size: 20px;
+  line-height: 29px;
+  font-weight: 400;
 }
 
 h5 {
@@ -6448,142 +6448,19 @@ body.admin-bar .header-area.style-7 {
   color: #ffffff;
 }
 
-.about-image-card.style-2 .main-img-wrapper .main-img-inner {
+.about-image-card.style-2 .image-wrapper {
   position: relative;
 }
-.about-image-card.style-2 .main-img-wrapper .main-img-inner img {
-  position: relative;
-  top: 0;
-  left: 0;
-  z-index: 1;
+.about-image-card.style-2 .image-wrapper .main-img img {
+  width: 100%;
+  height: 100%;
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner img {
-    width: 380px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner img {
-    width: 340px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner img {
-    width: 280px !important;
-  }
-}
-.about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image {
+.about-image-card.style-2 .image-wrapper .main-img .shape {
   position: absolute;
-  top: 294px;
-  left: 155px;
-  background: rgba(217, 161, 76, 0.15);
-  overflow: hidden;
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image {
-    top: 172px !important;
-    left: 88px !important;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image {
-    top: 218px;
-    left: 115px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image {
-    left: unset;
-    right: 0;
-    top: 250px;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image {
-    right: 10px;
-  }
-}
-.about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image img {
-  position: relative;
-  margin-top: 35px;
-  margin-left: 31px;
-  z-index: 2;
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image img {
-    width: 360px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image img {
-    width: 250px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .about-image-card.style-2 .main-img-wrapper .main-img-inner .top-image img {
-    width: 230px !important;
-  }
-}
-.about-image-card.style-2 .main-img-wrapper .main-img-inner .image-shape {
-  position: absolute;
-  right: 50px;
-  bottom: 20px;
-}
-.about-image-card.style-2 .main-img-wrapper .review-card {
-  width: 307px;
-  height: 135px;
-  background-color: #aa8453;
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  padding: 20px 30px;
-  margin-top: 60px;
-  position: relative;
-  z-index: 2;
-  margin-bottom: 24px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .about-image-card.style-2 .main-img-wrapper .review-card {
-    margin-bottom: 0;
-    margin-top: 30px;
-    padding: 20px;
-    width: 264px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .about-image-card.style-2 .main-img-wrapper .review-card {
-    margin-top: 30px;
-    padding: 20px;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .about-image-card.style-2 .main-img-wrapper .review-card {
-    margin-top: 30px;
-  }
-}
-.about-image-card.style-2 .main-img-wrapper .review-card .icon {
-  width: 65px;
-  height: 65px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-}
-.about-image-card.style-2 .main-img-wrapper .review-card .card-text h2 {
-  color: #ffffff;
-  font-size: 48px;
-  font-weight: 700;
-  line-height: 60px;
-  text-transform: capitalize;
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .about-image-card.style-2 .main-img-wrapper .review-card .card-text h2 {
-    font-size: 38px;
-  }
-}
-.about-image-card.style-2 .main-img-wrapper .review-card .card-text span {
-  color: #ffffff;
-  text-transform: capitalize;
+  bottom: 0;
+  right: 0;
+  width: 97px;
+  height: 327px;
 }
 
 .about-image-card.style-1 .image-wrapper {
@@ -7495,270 +7372,23 @@ body.admin-bar .header-area.style-7 {
 }
 
 .counter-card.style-1 {
-  position: relative;
-  text-align: center;
-}
-.counter-card.style-1 .content {
-  padding: 80px 0;
-  width: 100%;
-  text-align: center;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card.style-1 .content {
-    text-align: center;
-    padding: 0;
-    gap: 0;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .counter-card.style-1 .content {
-    padding: 40px 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .counter-card.style-1 .content {
-    text-align: center;
-    padding: 60px 0;
-    gap: 0;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .counter-card.style-1 .content {
-    text-align: center;
-    padding: 60px 0;
-    gap: 0;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .counter-card.style-1 .content {
-    text-align: center;
-    padding-left: 0;
-    gap: 0;
-  }
-}
-.counter-card.style-1 .content .number {
-  color: #ffffff;
-  width: 100%;
-}
-.counter-card.style-1 .content .title {
-  color: #ffffff;
-  white-space: nowrap;
-}
-.counter-card.style-1 .divider {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  width: 1px;
-  opacity: 0.2;
-  background-color: #ffffff;
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .counter-card.style-1 .divider {
-    bottom: 0;
-    top: unset;
-    left: 0;
-    right: unset;
-    width: 100%;
-    height: 1px;
-  }
-}
-.counter-card.style-1.first .content {
-  text-align: left;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card.style-1.first .content {
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .counter-card.style-1.first .content {
-    padding-top: 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .counter-card.style-1.first .content {
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .counter-card.style-1.first .content {
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .counter-card.style-1.first .content {
-    text-align: center;
-  }
-}
-.counter-card.style-1.last .content {
-  text-align: end;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card.style-1.last .content {
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .counter-card.style-1.last .content {
-    padding-bottom: 20px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .counter-card.style-1.last .content {
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .counter-card.style-1.last .content {
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .counter-card.style-1.last .content {
-    text-align: center;
-  }
-}
-.counter-card.style-1.last .divider {
-  display: none;
-}
-.counter-card.style-1.second .content {
-  text-align: left;
-  margin-left: 70px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card.style-1.second .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .counter-card.style-1.second .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .counter-card.style-1.second .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .counter-card.style-1.second .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 576px) {
-  .counter-card.style-1.second {
-    margin-bottom: 0px !important;
-  }
-  .counter-card.style-1.second .divider {
-    display: initial !important;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card.style-1.second {
-    margin-bottom: 50px;
-  }
-  .counter-card.style-1.second .divider {
-    display: none;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .counter-card.style-1.second {
-    margin-bottom: 50px;
-  }
-  .counter-card.style-1.second .divider {
-    display: none;
-  }
-}
-.counter-card.style-1.third .content {
-  text-align: left;
-  margin-left: 100px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card.style-1.third .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .counter-card.style-1.third .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .counter-card.style-1.third .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .counter-card.style-1.third .content {
-    text-align: center;
-    margin-left: 0;
-  }
-}
-.counter-card .content {
-  display: inline-flex;
-  gap: 10px;
+  display: flex;
   flex-direction: column;
-  position: relative;
+  gap: 10px;
 }
-.counter-card .content .number {
-  font-family: "Gilda Display", serif;
-  font-weight: 700;
-  font-size: 68px;
-  line-height: 78px;
+.counter-card.style-1 .count-content .counter {
   color: #222;
 }
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .counter-card .content .number {
-    font-size: 60px;
-    line-height: 72px;
-  }
+.counter-card.style-1 .count-content span {
+  color: #aa8453;
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card .content .number {
-    font-size: 48px;
-  }
-}
-.counter-card .content .title {
-  margin: 0;
+.counter-card.style-1 .title {
+  color: #222;
   font-family: "Barlow Condensed", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  text-transform: capitalize;
-  line-height: 30px;
-  color: #222;
 }
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card .content .title {
-    font-size: 18px;
-    line-height: 30px;
-    text-align: center;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .counter-card .content .title {
-    font-size: 20px;
-    line-height: 30px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .counter-card .content .title {
-    font-size: 18px;
-    line-height: 38px;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .counter-card .content .title br {
-    display: none;
-  }
+.counter-card.style-1 .desc {
+  margin-bottom: 0;
+  color: #808287;
 }
 
 .counter-card.style-2 {
@@ -14503,6 +14133,59 @@ ul.children {
   text-align: center;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .about-us-area.style-2 {
+    padding: 100px 0px !important;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .about-us-area.style-2 {
+    padding: 80px 0px !important;
+  }
+}
+.about-us-area.style-2 .counter-card-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 76px;
+}
+.about-us-area.style-2 .about-image-card {
+  position: relative;
+}
+.about-us-area.style-2 .about-image-card .right-bar {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateX(65%);
+  z-index: 1;
+}
+.about-us-area.style-2 .about-image-card .inner-wrapper {
+  position: relative;
+  width: 166px;
+  height: 2px;
+  background-color: #222;
+}
+.about-us-area.style-2 .about-image-card .inner-wrapper .short-bar {
+  width: 58px;
+  height: 2px;
+  background-color: #ffffff;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+}
+.about-us-area.style-2 .about-image-card .inner-wrapper .circle {
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  background-color: #222;
+  position: absolute;
+  right: 0;
+  transform: translate(50%, -50%);
+}
+.about-us-area.style-2 .about-info-card {
+  margin-top: 50px;
+}
+
 .portfolio-section.style-1 {
   padding: 120px 0;
 }
@@ -14723,25 +14406,6 @@ ul.children {
   }
   .contact-form-area.style-1 .sub-title {
     margin-bottom: 0;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .about-us-area.style-2 {
-    padding: 100px 0px !important;
-  }
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .about-us-area.style-2 {
-    padding: 80px 0px !important;
-  }
-}
-.about-us-area.style-2 .about-info-card {
-  margin-top: 70px;
-}
-@media (max-width: 1399px) {
-  .about-us-area.style-2 .about-info-card {
-    margin-top: 0;
   }
 }
 
@@ -14994,7 +14658,7 @@ ul.children {
   }
 }
 .subscribe-area .subscribe-form-widget .single-field input {
-  border: 1px solid #E3E3E3;
+  border: 1px solid #e3e3e3;
   color: #222;
   padding: 0 20px;
 }
@@ -15074,7 +14738,8 @@ ul.children {
     gap: 30px;
   }
 }
-.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn, .testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn {
+.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn,
+.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn {
   width: 60px;
   height: 60px;
   background-color: rgba(217, 161, 76, 0.1);
@@ -15083,7 +14748,8 @@ ul.children {
   box-shadow: none;
   transition: all 0.5s ease-out;
 }
-.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn:hover, .testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn:hover {
+.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn:hover,
+.testimonial-slider-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn:hover {
   background-color: #aa8453;
   color: #ffffff;
   transition: all 0.5s ease-out;
@@ -15118,7 +14784,8 @@ ul.children {
   padding: 40px;
   padding-right: 80px;
 }
-.testimonial-slider-area.style-2 #testimonial_style_two .slick-prev, .testimonial-slider-area.style-2 #testimonial_style_two .slick-next {
+.testimonial-slider-area.style-2 #testimonial_style_two .slick-prev,
+.testimonial-slider-area.style-2 #testimonial_style_two .slick-next {
   display: none !important;
 }
 .testimonial-slider-area.style-2 #testimonial_style_two .slick-arrow {
@@ -15158,7 +14825,8 @@ ul.children {
   gap: 20px;
   margin-bottom: 8px;
 }
-.latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn, .latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn {
+.latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn,
+.latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn {
   width: 60px;
   height: 60px;
   background-color: rgba(217, 161, 76, 0.1);
@@ -15167,7 +14835,8 @@ ul.children {
   box-shadow: none;
   transition: all 0.5s ease-out;
 }
-.latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn:hover, .latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn:hover {
+.latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-prev-btn:hover,
+.latest-posts-area.style-2 .section-title .slider-nav-btn-wrapper .slider-nav-next-btn:hover {
   background-color: #aa8453;
   color: #ffffff;
   transition: all 0.5s ease-out;
