--- a/css/style.css
+++ b/css/style.css
@@ -14186,6 +14186,65 @@ ul.children {
   margin-top: 50px;
 }
 
+.feature-and-facilities.style-1 {
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.feature-and-facilities.style-1 .overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(49, 43, 43, 0.8);
+  z-index: 1;
+}
+.feature-and-facilities.style-1 .section-title .sec-content .short-title {
+  color: #aa8453;
+}
+.feature-and-facilities.style-1 .section-title .sec-content .title {
+  color: #ffffff;
+}
+.feature-and-facilities.style-1 .btn-wrapper {
+  position: relative;
+  z-index: 2;
+  margin-top: 264px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.feature-and-facilities.style-1 .btn-wrapper .btn {
+  color: #ffffff;
+  font-family: "Gilda Display", serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+  display: inline-flex;
+  gap: 28px;
+}
+.feature-and-facilities.style-1 .btn-wrapper .btn:hover {
+  color: #aa8453;
+}
+.feature-and-facilities.style-1 .btn-wrapper .btn:hover span {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.5s ease-out;
+}
+.feature-and-facilities.style-1 .btn-wrapper .btn span {
+  visibility: hidden;
+  opacity: 0;
+  transform: rotate(-45deg);
+  transition: all 0.5s ease-out;
+}
+.feature-and-facilities.style-1 .btn-wrapper .btn span i {
+  font-family: "Font Awesome 6 Pro";
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: 300;
+}
+
 .portfolio-section.style-1 {
   padding: 120px 0;
 }
