--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -21,7 +21,11 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: linear-gradient(91deg, #000 0.47%, rgba(0, 0, 0, 0) 99.58%);
+        background-image: linear-gradient(
+          91deg,
+          #000 0.47%,
+          rgba(0, 0, 0, 0) 99.58%
+        );
       }
     }
 
@@ -450,7 +454,7 @@
       // right: 0;
       -webkit-text-stroke-width: 1px;
       -webkit-text-stroke-color: rgba(102, 102, 102, 0.7);
-      font-family: "Gilda Display";
+      font-family: 'Gilda Display';
       font-size: 200px;
       font-style: normal;
       font-weight: 400;
@@ -501,7 +505,7 @@
   background-position: center;
   position: relative;
   &:before {
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
@@ -610,6 +614,73 @@
     }
     .about-info-card {
       margin-top: 50px;
+    }
+  }
+}
+
+// Feature and facilities
+.feature-and-facilities {
+  &.style-1 {
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    .overlay {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(49, 43, 43, 0.8);
+      z-index: 1;
+    }
+    .section-title {
+      .sec-content {
+        .short-title {
+          color: $primary-color;
+        }
+        .title {
+          color: $white;
+        }
+      }
+    }
+    .btn-wrapper {
+      position: relative;
+      z-index: 2;
+      margin-top: 264px;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      .btn {
+        color: $white;
+        font-family: $heading-font;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 40px;
+        display: inline-flex;
+        gap: 28px;
+        &:hover {
+          color: $primary-color;
+          span {
+            visibility: visible;
+            opacity: 1;
+            @include transition;
+          }
+        }
+        span {
+          visibility: hidden;
+          opacity: 0;
+          transform: rotate(-45deg);
+          @include transition;
+
+          i {
+            font-family: $font-awesome;
+            color: $white;
+            font-size: 22px;
+            font-weight: 300;
+          }
+        }
+      }
     }
   }
 }
